# AlphaSnake

./: .gitignore  CMakeLists.txt  README.md  dlload.h  main.cpp
AlphaEngine/: CMakeLists.txt
AlphaEngine/Include/: AlphaEngine.hpp  JobSystem.hpp
AlphaEngine/Source/: AlphaEngine.cpp  JobSystem.cpp
AlphaEngine/Tangara/: CMakeLists.txt
AlphaEngine/Tangara/Include/Private/: Heap.hpp  Interface.hpp  Stack.hpp  Type.hpp
AlphaEngine/Tangara/Include/Public/: tangara.h
AlphaEngine/Tangara/Source/: Heap.cpp  Interface.cpp  Stack.cpp  Type.cpp
Exe/: CMakeLists.txt  main.cpp
InputSystem/: InputSystem.cs  InputSystem.sln
RenderSystem/: CMakeLists.txt
RenderSystem/Include/Private/: RenderSystem.h
RenderSystem/Source/: RenderSystem.c
Snake/: Game.lua
